<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".homeFragment">

    <!-- TODO: Update blank fragment layout -->


    <androidx.core.widget.NestedScrollView


            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".MainActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:gravity="center|center_vertical">

                <ImageView
                        android:id="@+id/icon"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_add_circle_black_48dp" />

                <TextView
                        android:id="@+id/newListing"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:lines="1"
                        android:maxLines="1"
                        android:layout_marginTop="16dp"
                        android:layout_toRightOf="@id/icon"
                        android:layout_toEndOf="@id/icon"
                        android:text="@string/newListing"

                        android:textSize="16sp" />


            </RelativeLayout>
            <View style="@style/Divider"/>
            <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                               style="@style/AppTheme.MyCardViewNotif"
                                               android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/linear">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:text="@string/notification"
                              android:layout_marginTop="8dp"
                              android:paddingBottom="8dp"
                              app:layout_constraintTop_toTopOf="parent"
                              app:layout_constraintStart_toStartOf="parent"
                              android:layout_marginStart="8dp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
            <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/today_pick"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                         xmlns:tools="http://schemas.android.com/tools"
                         android:id="@+id/todaysContainer"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         tools:context=".MainActivity">
            </FrameLayout>
            <View style="@style/Divider"/>


            <TextView
                    android:id="@+id/clothingText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/clothes"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                         xmlns:tools="http://schemas.android.com/tools"
                         android:id="@+id/clothingContainer"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         tools:context=".MainActivity">
            </FrameLayout>
            <TextView
                    style="@style/seeMore"/>
            <View style="@style/Divider"/>


            <TextView
                    android:id="@+id/jewerlyText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/jewerly"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                         xmlns:tools="http://schemas.android.com/tools"
                         android:id="@+id/jewerlyContainer"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         tools:context=".MainActivity">
            </FrameLayout>
            <TextView
                    style="@style/seeMore"/>
            <View style="@style/Divider"/>


            <TextView
                    android:id="@+id/titleTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/today_pick"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                         xmlns:tools="http://schemas.android.com/tools"
                         android:id="@+id/fragmentContainer3"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         tools:context=".MainActivity">
            </FrameLayout>
            <TextView
                    style="@style/seeMore"/>
            <View style="@style/Divider"/>


            <TextView
                    android:id="@+id/titleTextView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/today_pick"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                         xmlns:tools="http://schemas.android.com/tools"
                         android:id="@+id/fragmentContainer4"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         tools:context=".MainActivity">
            </FrameLayout>
            <TextView
                    style="@style/seeMore"/>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>