<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:padding="@dimen/margin_detail_listing">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/ic_account_circle_black_24dp"
                    android:id="@+id/iconeProfile2" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="156dp"
                    android:layout_marginTop="16dp"/>
            <TextView
                    android:text="Tinhinane"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2"
                    tools:layout_editor_absoluteY="102dp" tools:layout_editor_absoluteX="169dp"/>
            <ImageView
                    android:layout_width="53dp"
                    android:layout_height="48dp" app:srcCompat="@drawable/ic_account_circle_black_24dp"
                    android:id="@+id/recommandImage" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="28dp"
                    android:layout_marginTop="132dp"/>
            <ImageView
                    android:layout_width="59dp"
                    android:layout_height="49dp" app:srcCompat="@drawable/ic_account_circle_black_24dp"
                    android:id="@+id/messageImage" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="296dp"
                    android:layout_marginTop="132dp"/>
            <ImageView
                    android:layout_width="63dp"
                    android:layout_height="52dp" app:srcCompat="@drawable/ic_account_circle_black_24dp"
                    android:id="@+id/followImage" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="156dp"
                    android:layout_marginTop="128dp"/>
            <TextView
                    android:text="@string/follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="32dp" app:layout_constraintTop_toBottomOf="@id/followImage"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:text="@string/recommand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView4"
                    app:layout_constraintBottom_toBottomOf="@id/recommandImage" android:layout_marginStart="80dp"
                    app:layout_constraintStart_toEndOf="@+id/textView3"/>
            <TextView
                    android:text="@string/message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView5"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/messageImage"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:padding="@dimen/margin_detail_listing">
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView6"/>
        <ImageView
                android:layout_width="53dp"
                android:layout_height="48dp" app:srcCompat="@drawable/ic_account_circle_black_24dp"
                android:id="@+id/member" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="28dp"
                android:layout_marginTop="132dp"/>
        <ImageView
                android:layout_width="59dp"
                android:layout_height="49dp" app:srcCompat="@drawable/ic_account_circle_black_24dp"
                android:id="@+id/follow2" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="296dp"
                android:layout_marginTop="132dp"/>
        <ImageView
                android:layout_width="63dp"
                android:layout_height="52dp" app:srcCompat="@drawable/ic_account_circle_black_24dp"
                android:id="@+id/recommended2" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="148dp"
                android:layout_marginTop="132dp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:padding="@dimen/margin_detail_listing">
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView7"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:padding="@dimen/margin_detail_listing">
        <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView8"/>
    </androidx.cardview.widget.CardView>
</LinearLayout>